<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:id="@+id/blockOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:paddingTop="20dp"
        >
        <ImageView
            android:id="@+id/russiaFlag"
            android:layout_width="87dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/russia_flag"/>
        <ImageView
            android:id="@+id/britainFlag"
            android:layout_width="87dp"
            android:layout_height="48dp"
            android:layout_centerHorizontal="true"
            android:layout_toLeftOf="@+id/russiaFlag"
            android:src="@drawable/britain_flag" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/blockTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blockOne"
        android:paddingTop="20dp"
        android:paddingLeft="8dp">
        <TextView
            android:id="@+id/questionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"

            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:gravity="center_horizontal"
            android:text="@string/question1" />
        <RadioGroup
            android:id="@+id/radioGroupOne"
            android:layout_below="@+id/questionOne"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        <RadioButton
            android:id="@+id/answerOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questionOne"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="5dp"
            android:textSize="16sp"
            android:text="@string/answer1"
            />
        <RadioButton
            android:id="@+id/answerTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:text="@string/answer2"
            />
        <RadioButton
            android:id="@+id/answerThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="2dp"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
            android:text="@string/answer3"
            />
        <RadioButton
            android:id="@+id/answerFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="4dp"
            android:textSize="16sp"
            android:text="@string/answer4"
            />
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/blockThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupOne"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/questionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:text="@string/question2" />
        <CheckBox
            android:id="@+id/answerFive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questionTwo"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:text="@string/answer5"
            />
        <CheckBox
            android:id="@+id/answerSix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answerFive"
            android:layout_centerHorizontal="true"
            android:layout_alignLeft="@+id/answerFive"
            android:textSize="16sp"
            android:text="@string/answer6"
            />
        <CheckBox
            android:id="@+id/answerSeven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answerSix"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_alignLeft="@+id/answerSix"
            android:textSize="16sp"
            android:text="@string/answer7"
            />
        <CheckBox
            android:id="@+id/answerEight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/answerSeven"
            android:layout_centerHorizontal="true"
            android:layout_alignLeft="@+id/answerSeven"
            android:textSize="16sp"
            android:text="@string/answer8"
            />
        </RelativeLayout>
    <RelativeLayout
        android:id="@+id/blockFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blockThree"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/questionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            android:text="@string/question3" />
        <EditText
            android:id="@+id/answerNine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/questionThree"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:textColor="#90A4AE"
            android:textColorHint="#90A4AE"
            android:textSize="16sp"
            android:hint='Your Answer'
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/blockFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blockFour"
        android:gravity="center_horizontal">
            <TextView
                android:id="@+id/questionFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:text="@string/question4"
                />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/questionFour"
                >
                <RadioButton
                    android:id="@+id/answerTen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:layout_marginRight="4dp"
                    android:text="@string/answer10"
                    />
                <RadioButton
                    android:id="@+id/answerEleven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:text="@string/answer11"
                    />
                <RadioButton
                    android:id="@+id/answerTwelve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="2dp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:text="@string/answer12"
                   />
                <RadioButton
                    android:id="@+id/answerThirteen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginRight="6dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:text="@string/answer13"
                    />
            </RadioGroup>
    </RelativeLayout>
    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/blockFive"
        android:textColor="#fff"
        android:textSize="24sp"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:textAllCaps="true"
        android:onClick="submitAnswers"
        android:text="@string/submitQuiz"
        />
    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:layout_below="@+id/submit_button"
        android:textColor="#fff"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:textAllCaps="true"
        android:onClick="resetButton"
        android:text="@string/reset" />
    <TextView
        android:id="@+id/quiz_score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E64A19"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="12dp"
        android:textSize="18sp"
        android:text=""/>
    <TextView
        android:id="@+id/quiz_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#E64A19"
        android:fontFamily="sans-serif-medium"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="24dp"
        android:textSize="18sp"
        android:text=""/>
</LinearLayout>
</ScrollView>


